criar section coxinha e bolovo e adição de arquivos

--- a/index.html
+++ b/index.html
@@ -1,12 +1,89 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
 <head>
+    <!-- MARQUEEEEEE !-->
     <meta charset="UTF-8">
+    <meta name="author" content="Jullya"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Comida de Boteco, boteco, fome">
+    <meta name="description" content="Serviço de Buffet a Domicilio com Cardápio de Boteco. Confira! Experiência e Qualidade. Orçamento sem Compromisso. Qualidade e Segurança.">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Comida de Boteco</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="">LOGO</a>
+        </nav>
+        <nav>
+            <ul>
+                <li>Coxinhas</li>
+                <li>Bolovos</li>
+                <li>Pastéis</li>
+                <li>Extras</li>
+                <li>Bebidas</li>
+                <li>Sobremesas</li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div>
+            <h1>As famosas comidas de boteco</h1>
+            <p>Essas são as delícias do nosso verão.</p>
+            <img src="assets/images/bolovo.jpg" alt="Bolovo">
+        </div>
+
+        <section id="bolovos">
+            <div>
+                <h2>Bolovo não é janta</h2>
+                <p>Extra! <a href="https://google.com" target="self">Veja</a> Como transformá-lo em janta.</p>
+                <img src="http://s2.glbimg.com/TNWwhESVAl_ilR6DsrOC6R5On7E=/s.glbimg.com/et/gs/f/original/2016/09/05/bolovo2.jpg" alt="Bolovos">
+                <aside>
+                    <p>Na vida descobrimos coisas novas.</p>
+                </aside>
+            </div>
+        </section>
+
+        <section id="coxinha">
+            <article>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora voluptates sequi fugiat, natus neque, consectetur maiores suscipit, quaerat dignissimos incidunt ipsum! Ipsa sint quaerat expedita fugit. Quis voluptatem ratione optio.</p>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <div>
+            <div>
+                <ol>
+                    <li>+INFO</li>
+                    <li>Sobre</li>
+                    <li>Contato</li>
+                    <li>Redes Sociais</li>
+                    <li>Trabalhe Conosco</li>
+                </ol>
+            </div>
+
+            <div>
+                <ol>
+                    <li>+LINKS</li>
+                    <li>Coxinhas</li>
+                    <li><a href="#bolovos">Bolovos</a></li>
+                    <li>Pastéis</li>
+                    <li>Extras</li>
+                    </ol>
+            </div>
+
+            <div>
+                <ol>
+                    <li>+Redes Sociais</li>
+                    <li>Facebook</li>
+                    <li>Instagram</li>
+                    <li>Whatsapp</li>
+                    <li>Orkut</li>
+                </ol>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
