--- a/index.html
+++ b/index.html
@@ -3,42 +3,47 @@
 <head>
     <!-- MARQUEEEEEE !-->
     <meta charset="UTF-8">
-    <meta name="author" content="Jullya"
+    <meta name="author" content="Jullya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Comida de Boteco, boteco, fome">
     <meta name="description" content="Serviço de Buffet a Domicilio com Cardápio de Boteco. Confira! Experiência e Qualidade. Orçamento sem Compromisso. Qualidade e Segurança.">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/estilo.css">
+    <link href="https://fonts.googleapis.com/css?family=Krub" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=K2D|Krub" rel="stylesheet">
     <title>Comida de Boteco</title>
 </head>
 <body>
     <header>
-        <nav>
-            <a href="">LOGO</a>
-        </nav>
-        <nav>
+        <nav class="menu">
+            <a href=""><img src="assets/images/logo.png" alt="Logotipo"></a>
             <ul>
                 <li>Coxinhas</li>
-                <li>Bolovos</li>
-                <li>Pastéis</li>
-                <li>Extras</li>
-                <li>Bebidas</li>
-                <li>Sobremesas</li>
+                <li><a href="#bolovos">Bolovos</a></li>
+                <li><a href="#">Pastéis</a></li>
+                <li><a href="#">Extras</a></li>
+                <li><a href="#">Bebidas</a></li>
+                <li><a href="#">Sobremesas</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <div>
+        <div class="banner">
             <h1>As famosas comidas de boteco</h1>
             <p>Essas são as delícias do nosso verão.</p>
-            <img src="assets/images/bolovo.jpg" alt="Bolovo">
         </div>
+
+        <section id="receita-bolovo">
+                <img class="estilo-imagem" src="assets/images/bolovo.jpg" alt="Bolovo">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem corporis unde, commodi autem consectetur adipisci numquam, harum cupiditate impedit cum beatae magni amet assumenda recusandae ipsa repellat culpa accusantium maiores?</p>
+        </section>
 
         <section id="bolovos">
             <div>
                 <h2>Bolovo não é janta</h2>
                 <p>Extra! <a href="https://google.com" target="self">Veja</a> Como transformá-lo em janta.</p>
-                <img src="http://s2.glbimg.com/TNWwhESVAl_ilR6DsrOC6R5On7E=/s.glbimg.com/et/gs/f/original/2016/09/05/bolovo2.jpg" alt="Bolovos">
+                <img class="estilo-imagem" src="http://s2.glbimg.com/TNWwhESVAl_ilR6DsrOC6R5On7E=/s.glbimg.com/et/gs/f/original/2016/09/05/bolovo2.jpg" alt="Bolovos">
                 <aside>
                     <p>Na vida descobrimos coisas novas.</p>
                 </aside>
@@ -68,7 +73,7 @@
                 <ol>
                     <li>+LINKS</li>
                     <li>Coxinhas</li>
-                    <li><a href="#bolovos">Bolovos</a></li>
+                    <li>Bolovos</li>
                     <li>Pastéis</li>
                     <li>Extras</li>
                     </ol>
