flexbox do site

--- a/index.html
+++ b/index.html
@@ -18,48 +18,54 @@
         <nav class="menu">
             <a href=""><img src="assets/images/logo.png" alt="Logotipo"></a>
             <ul>
-                <li>Coxinhas</li>
+                <li><a href="#">Coxinhas</a></li>
                 <li><a href="#bolovos">Bolovos</a></li>
                 <li><a href="#">Pastéis</a></li>
                 <li><a href="#">Extras</a></li>
                 <li><a href="#">Bebidas</a></li>
-                <li><a href="#">Sobremesas</a></li>
+                <li><a href="#">Login</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <div class="banner">
-            <h1>As famosas comidas de boteco</h1>
+            <h1><marquee>As famosas comidas de boteco</marquee></h1>
             <p>Essas são as delícias do nosso verão.</p>
         </div>
 
         <section id="receita-bolovo">
-                <img class="estilo-imagem" src="assets/images/bolovo.jpg" alt="Bolovo">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem corporis unde, commodi autem consectetur adipisci numquam, harum cupiditate impedit cum beatae magni amet assumenda recusandae ipsa repellat culpa accusantium maiores?</p>
-        </section>
+            <div class="container">
+                <div>
+                    <img class="estilo-imagem" src="assets/images/bolovo.jpg" alt="Bolovo">
+                </div>
+                <div class="sobre-bolovos">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem corporis unde, commodi autem consectetur adipisci numquam, harum cupiditate impedit cum beatae magni amet assumenda recusandae ipsa repellat culpa accusantium maiores?</p>
+                </div>
+            </div>
+            </section>
 
         <section id="bolovos">
-            <div>
+            <div class="container-flex">
                 <h2>Bolovo não é janta</h2>
-                <p>Extra! <a href="https://google.com" target="self">Veja</a> Como transformá-lo em janta.</p>
-                <img class="estilo-imagem" src="http://s2.glbimg.com/TNWwhESVAl_ilR6DsrOC6R5On7E=/s.glbimg.com/et/gs/f/original/2016/09/05/bolovo2.jpg" alt="Bolovos">
-                <aside>
-                    <p>Na vida descobrimos coisas novas.</p>
-                </aside>
+                    <p>Extra! <a href="https://google.com" target="self">Veja</a> Como transformá-lo em janta.</p>
+                    <img class="estilo-imagem" src="http://s2.glbimg.com/TNWwhESVAl_ilR6DsrOC6R5On7E=/s.glbimg.com/et/gs/f/original/2016/09/05/bolovo2.jpg" alt="Bolovos">  
+                <div class="paragrafo"> 
+                    <aside>
+                        <p>Na vida descobrimos coisas novas.</p>
+                    </aside>
+                </div>
             </div>
         </section>
 
         <section id="coxinha">
-            <article>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora voluptates sequi fugiat, natus neque, consectetur maiores suscipit, quaerat dignissimos incidunt ipsum! Ipsa sint quaerat expedita fugit. Quis voluptatem ratione optio.</p>
-            </article>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora voluptates sequi fugiat, natus neque, consectetur maiores suscipit, quaerat dignissimos incidunt ipsum! Ipsa sint quaerat expedita fugit. Quis voluptatem ratione optio.</p>
         </section>
     </main>
 
     <footer>
-        <div>
-            <div>
+        <div class="lista-footer">
+            <div class="info">
                 <ol>
                     <li>+INFO</li>
                     <li>Sobre</li>
@@ -69,7 +75,7 @@
                 </ol>
             </div>
 
-            <div>
+            <div class="links">
                 <ol>
                     <li>+LINKS</li>
                     <li>Coxinhas</li>
@@ -79,7 +85,7 @@
                     </ol>
             </div>
 
-            <div>
+            <div class="redes">
                 <ol>
                     <li>+Redes Sociais</li>
                     <li>Facebook</li>
